crates/toml_edit/tests/fixtures/invalid/string/no-open-05.stderr
TOML parse error at line 1, column 5
  |
1 | a = a"""
  |     ^
invalid string
expected `"`, `'`
